--- a/app/index.html
+++ b/app/index.html
@@ -40,29 +40,11 @@
           <option value="cns_pk">Фармакокинетика</option>
         </select>
 
-        <!-- INDICATION -->
-        <input
-          type="text"
-          name="indication"
-          placeholder="Indication / study objective"
-          class="add-input"
-          form="searchform"
-        />
-
         <!-- REGIMEN -->
         <input
           type="text"
           name="regimen"
-          placeholder="Regimen (e.g., after high-fat meal)"
-          class="add-input"
-          form="searchform"
-        />
-
-        <!-- SPONSOR -->
-        <input
-          type="text"
-          name="sponsor"
-          placeholder="Спонсор"
+          placeholder="Режим приема"
           class="add-input"
           form="searchform"
         />
@@ -80,7 +62,7 @@
         <input
           type="text"
           name="centers"
-          placeholder="Centers (e.g., 1–3 sites, countries/cities)"
+          placeholder="Центры"
           class="add-input"
           form="searchform"
         />
@@ -110,7 +92,7 @@
           step="0.01"
           min="0"
           max="5"
-          placeholder="CVintra (default: 0.30)"
+          placeholder="CVintra (0.30)"
           class="add-input"
           form="searchform"
         />
@@ -122,7 +104,7 @@
           step="0.01"
           min="0"
           max="1"
-          placeholder="Power (default: 0.80)"
+          placeholder="Мощность (0.80)"
           class="add-input"
           form="searchform"
         />
@@ -134,7 +116,7 @@
           step="0.001"
           min="0"
           max="1"
-          placeholder="Alpha (default: 0.05)"
+          placeholder="Alpha (0.05)"
           class="add-input"
           form="searchform"
         />
@@ -146,7 +128,7 @@
           step="0.01"
           min="0"
           max="5"
-          placeholder="GMR (default: 0.95)"
+          placeholder="GMR (0.95)"
           class="add-input"
           form="searchform"
         />
@@ -175,7 +157,7 @@
         <!-- LOCAL SYNOPSIS PATHS (one per line) -->
         <input
           name="local_synopsis"
-          placeholder="Local synopsis file paths (one per line)"
+          placeholder="Пути для локального синопсиса"
           class="add-input"
           form="searchform"
           rows="3"
